challenge_15/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: czribi
spec:
  containers:
  - name: test-container
    image: curlimages/curl:latest
    command: ["/bin/sh", "-c", "sleep 3600"]
    resources:
      limits:
        cpu: "50m"
        memory: "100Mi"
      requests:
        cpu: "10m"
        memory: "50Mi"
