challenge_15/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: czribi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: alpine:latest
        command: ["/bin/sh", "-c", "apk add --no-cache netcat-openbsd && sleep 3600"]
        ports:
        - containerPort: 80
