challenge_15/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: czribi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: czribi
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
